--- a/putninalozi/templates/company_list.html
+++ b/putninalozi/templates/company_list.html
@@ -16,43 +16,45 @@
     </tr>
   </thead>
   <tbody>
-    {% if current_user.authorization == 's_admin' %} {% for company in companys
-    %}
-    <tr>
-      <td>
-        <a
-          class="mr-2 btn btn-info"
-          href="{{ url_for('companys.company_profile', company_id=company.id) }}"
-          title="Uređivanje kompanije"
-          >{{ company.companyname }}</a
-        >
-      </td>
-      <td>
-        {{ company.company_address }} {{ company.company_address_number }}
-      </td>
-      <td>{{ company.company_city }}, {{ company.company_state }}</td>
-      <td>
-        {{ company.company_site }} / {{ company.company_mail }} / {{
-        company.company_phone }}
-      </td>
-    </tr>
-    {% endfor %} {% else %} {% for company in companys %} {% if
-    company.companyname == current_user.user_company.companyname %}
-    <tr>
-      <td>
-        <a
-          class="mr-2 btn btn-info"
-          href="{{ url_for('companys.company_profile', company_id=company.id) }}"
-          title="Uređivanje kompanije"
-          >{{ company.companyname }}</a
-        >
-      </td>
-      <td>
-        {{ company.company_address }} {{ company.company_address_number }}
-      </td>
-      <td>{{ company.company_city }}, {{ company.company_state }}</td>
-    </tr>
-    {% endif %} {% endfor %}
+    {% if current_user.authorization == 's_admin' %} 
+      {% for company in companys %}
+      <tr>
+        <td>
+          <a
+            class="mr-2 btn btn-info"
+            href="{{ url_for('companys.company_profile', company_id=company.id) }}"
+            title="Uređivanje kompanije"
+            >{{ company.companyname }}</a
+          >
+        </td>
+        <td>
+          {{ company.company_address }} {{ company.company_address_number }}
+        </td>
+        <td>{{ company.company_city }}, {{ company.company_state }}</td>
+        <td>
+          {{ company.company_site }} / {{ company.company_mail }} / {{ company.company_phone }}
+        </td>
+      </tr>
+      {% endfor %} 
+    {% else %} 
+      {% for company in companys %} 
+        {% if company.companyname == current_user.user_company.companyname %}
+        <tr>
+          <td>
+            <a
+              class="mr-2 btn btn-info"
+              href="{{ url_for('companys.company_profile', company_id=company.id) }}"
+              title="Uređivanje kompanije"
+              >{{ company.companyname }}</a
+            >
+          </td>
+          <td>
+            {{ company.company_address }} {{ company.company_address_number }}
+          </td>
+          <td>{{ company.company_city }}, {{ company.company_state }}</td>
+        </tr>
+        {% endif %} 
+      {% endfor %}
   </tbody>
   {% endif %}
 </table>
