--- a/putninalozi/templates/travel_warrant.html
+++ b/putninalozi/templates/travel_warrant.html
@@ -5,58 +5,46 @@
     <fieldset class="form-group">
       {% if form.errors %} debag line: {{ form.errors }} {% endif %}
       <legend class="border-bottom mb-4">Broj putnog naloga: {{ warrant.travel_warrant_number }}</legend>
-      <legend class=""> Zaposleni: <input type="text" class="form-control form-control-lg" value="{{ warrant.travelwarrant_user.name }}  {{ warrant.travelwarrant_user.surname }}" disabled></legend>
-      <legend class="border-bottom mb-4"> <input class="form-control form-control-lg" type="datetime-local", value="{{ warrant.start_datetime }}" disabled></legend>
+      <legend class=""> Zaposleni:</legend>
+      <div class="row">
+        <div class="col form-box col-md-6">
+          <input type="text" class="form-control form-control-lg" value="{{ warrant.travelwarrant_user.name }}  {{ warrant.travelwarrant_user.surname }}" disabled>
+        </div>
+        <div class="col form-box col-md-6 mb-4">
+          <input class="form-control form-control-lg" type="datetime-local", value="{{ warrant.start_datetime }}" disabled>
+        </div>
+      </div>
+      
       <div class="accordion nothere" id="accordionZero">
         <div class="accordion-item">
           <div class="accordion-header" id="headingZero">
-            <button
-              type="button"
-              class="accordion-button collapsed"
-              data-toggle="collapse"
-              data-target="#collapseZero"
-              aria-expanded="false"
-              aria-controls="collapseZero"
-            >
+            <button type="button" class="accordion-button collapsed" data-toggle="collapse" data-target="#collapseZero" aria-expanded="false" aria-controls="collapseZero">
               Detalji
-              <!-- https://getbootstrap.com/docs/5.2/components/accordion/#css -->
-              <!-- https://getbootstrap.com/docs/5.2/components/accordion/#css -->
-              <!-- https://getbootstrap.com/docs/5.2/components/accordion/#css -->
-              <!-- https://getbootstrap.com/docs/5.2/components/accordion/#css -->
-              <!-- https://getbootstrap.com/docs/5.2/components/accordion/#css -->
-              <!-- https://getbootstrap.com/docs/5.2/components/accordion/#css -->
-              <!-- https://getbootstrap.com/docs/5.2/components/accordion/#css -->
-              <!-- https://getbootstrap.com/docs/5.2/components/accordion/#css -->
             </button>
           </div>
 
-          <div
-            id="collapseZero"
-            class="collapse"
-            aria-labelledby="headingZero"
-            data-parent="#accordionZero"
-          >
+          <div id="collapseZero" class="collapse" aria-labelledby="headingZero" data-parent="#accordionZero">
             <div class="card-body">
               {{ detalji | safe }}
             </div>
           </div>
         </div>
       </div>
+      <div class="form-box">
+        {{ form.with_task.label(class="form-control-label") }} 
+        {% if form.with_task.errors %} 
+          {{ form.with_task(class="form-control form-control-lg is-invalid") }}
+          <div class="invalid-feedback">
+            {% for error in form.with_task.errors %}
+            <span>{{ error }}</span>
+            {% endfor %}
+          </div>
+        {% else %} 
+          {{ form.with_task(class="form-control form-control-lg") }}
+        {% endif %}
+      </div>
       <div class="row">
         <div class="col form-box col-md-6">
-          {{ form.with_task.label(class="form-control-label") }} 
-          {% if form.with_task.errors %} 
-            {{ form.with_task(class="form-control form-control-lg is-invalid") }}
-            <div class="invalid-feedback">
-              {% for error in form.with_task.errors %}
-              <span>{{ error }}</span>
-              {% endfor %}
-            </div>
-          {% else %} 
-            {{ form.with_task(class="form-control form-control-lg") }}
-          {% endif %}
-        </div>
-        <div class="col form-box col-md-3">
           {{ form.start_datetime.label(class="form-control-label") }} 
           {% if form.start_datetime.errors %} 
             {{ form.start_datetime(class="form-control form-control-lg is-invalid")  }}
@@ -69,7 +57,7 @@
             {{ form.start_datetime(class="form-control form-control-lg", type="datetime-local", min=start_datetime_min, max=start_datetime_max) }}
           {% endif %}
         </div>
-        <div class="col form-box col-md-3">
+        <div class="col form-box col-md-6">
           {{ form.end_datetime.label(class="form-control-label") }} 
           {% if form.end_datetime.errors %} 
             {{ form.end_datetime(class="form-control form-control-lg is-invalid", min=warrant.start_datetime) }}
