--- a/putninalozi/templates/travel_warrant_user.html
+++ b/putninalozi/templates/travel_warrant_user.html
@@ -4,12 +4,19 @@
   <form  action="" method="POST">
     {{ form.hidden_tag() }}
     <fieldset class="form-group">
-      <legend class="border-bottom mb-4">Broj putnog naloga: {{ warrant.travel_warrant_number }}</legend>
-      <legend class=""> Zaposleni: <input type="text" class="form-control form-control-lg" value="{{ warrant.travelwarrant_user.name }}  {{ warrant.travelwarrant_user.surname }}" disabled></legend>
-      <legend class="border-bottom mb-4"> <input class="form-control form-control-lg" type="datetime-local", value="{{ warrant.start_datetime }}" disabled></legend>
       {% if form.errors %}
       debag line: {{ form.errors }}
       {% endif %}
+      <legend class="border-bottom mb-4">Broj putnog naloga: {{ warrant.travel_warrant_number }}</legend>
+      <legend class=""> Zaposleni:</legend>
+      <div class="row">
+        <div class="col form-box col-md-6">
+          <input type="text" class="form-control form-control-lg" value="{{ warrant.travelwarrant_user.name }}  {{ warrant.travelwarrant_user.surname }}" disabled>
+        </div>
+        <div class="col form-box col-md-6 mb-4">
+          <input class="form-control form-control-lg" type="datetime-local", value="{{ warrant.start_datetime }}" disabled>
+        </div>
+      </div>
       <div id="accordionZero">
         <div class="accordion" id="accordionZero">
           <div class="accordion-item">
@@ -45,107 +52,107 @@
         {% endif %}
       </div>
       <div class="row">
-        <div id="collapseAbrod" class="collapse" aria-labelledby="headingAbrod" data-parent="#accordionAbrod">
-          <div class="card-body paddingall">
-            {{ form.abroad_contry.label(class="form-control-label") }}
-            {% if form.abroad_contry.errors %}
-              {{ form.abroad_contry(class="form-control form-control-lg is-invalid") }}
-              <div class="invalid-feedback">
-                {% for error in form.abroad_contry.errors %}
-                  <span>{{ error }}</span>
-                {% endfor %}
-              </div>
-            {% else %}
-                {{ form.abroad_contry(class="form-control form-control-lg") }}
-            {% endif %}
-          </div>
-          <div class="col form-box paddingall">
-            {{ form.contry_leaving.label(class="form-control-label") }}
-            {% if form.contry_leaving.errors %}
-              {{ form.contry_leaving(class="form-control form-control-lg is-invalid") }}
-              <div class="invalid-feedback">
-                {% for error in form.contry_leaving.errors %}
-                  <span>{{ error }}</span>
-                {% endfor %}
-              </div>
-            {% else %}
-              {{ form.contry_leaving(class="form-control form-control-lg", type="datetime-local") }}
-            {% endif %}
-          </div>
-          <div class="col form-box paddingall">
-            {{ form.contry_return.label(class="form-control-label") }}
-            {% if form.contry_return.errors %}
-              {{ form.contry_return(class="form-control form-control-lg is-invalid") }}
-              <div class="invalid-feedback">
-                {% for error in form.contry_return.errors %}
-                  <span>{{ error }}</span>
-                {% endfor %}
-              </div>
-            {% else %}
-              {{ form.contry_return(class="form-control form-control-lg", type="datetime-local") }}
-            {% endif %}
-          </div>
-        </div>
-      </div>
-      <div class="row">
         <div class="col form-box">
           {{ form.with_task.label(class="form-control-label") }}
-            {% if form.with_task.errors %}
-                {{ form.with_task(class="form-control form-control-lg is-invalid") }}
-                <div class="invalid-feedback">
+          {% if form.with_task.errors %}
+          {{ form.with_task(class="form-control form-control-lg is-invalid") }}
+          <div class="invalid-feedback">
                     {% for error in form.with_task.errors %}
-                        <span>{{ error }}</span>
+                    <span>{{ error }}</span>
                     {% endfor %}
+                  </div>
+                  {% else %}
+                  {{ form.with_task(class="form-control form-control-lg") }}
+                  {% endif %}
                 </div>
-            {% else %}
-                {{ form.with_task(class="form-control form-control-lg") }}
-            {% endif %}
-        </div>
-        <div class="col form-box">
-          {{ form.start_datetime.label(class="form-control-label") }}
-            {% if form.start_datetime.errors %}
-                {{ form.start_datetime(class="form-control form-control-lg is-invalid") }}
-                <div class="invalid-feedback">
+                <div class="col form-box">
+                  {{ form.start_datetime.label(class="form-control-label") }}
+                  {% if form.start_datetime.errors %}
+                  {{ form.start_datetime(class="form-control form-control-lg is-invalid") }}
+                  <div class="invalid-feedback">
                     {% for error in form.start_datetime.errors %}
-                        <span>{{ error }}</span>
+                    <span>{{ error }}</span>
                     {% endfor %}
+                  </div>
+                  {% else %}
+                  {{ form.start_datetime(class="form-control form-control-lg", type="datetime-local") }}
+                  {% endif %}
                 </div>
-            {% else %}
-                {{ form.start_datetime(class="form-control form-control-lg", type="datetime-local") }}
-            {% endif %}
-        </div>
-        <div class="row padright0">
-          <div class="col form-box">
-            {{ form.status.label(class="form-control-label") }}
-              {% if form.status.errors %}
-                  {{ form.status(class="form-control form-control-lg is-invalid") }}
-                  <div class="invalid-feedback">
+                <div class="row padright0">
+                  <div class="col form-box">
+                    {{ form.status.label(class="form-control-label") }}
+                    {% if form.status.errors %}
+                    {{ form.status(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
                       {% for error in form.status.errors %}
-                          <span>{{ error }}</span>
+                      <span>{{ error }}</span>
                       {% endfor %}
+                    </div>
+                    {% else %}
+                    {{ form.status(class="form-select form-select-lg") }}
+                    {% endif %}
                   </div>
-              {% else %}
-                  {{ form.status(class="form-select form-select-lg") }}
-              {% endif %}
-          </div>
-          <div class="col form-box padright0">
-            {{ form.end_datetime.label(class="form-control-label") }}
-              {% if form.end_datetime.errors %}
-                  {{ form.end_datetime(class="form-control form-control-lg is-invalid", min=warrant.start_datetime) }}
-                  <div class="invalid-feedback">
+                  <div class="col form-box padright0">
+                    {{ form.end_datetime.label(class="form-control-label") }}
+                    {% if form.end_datetime.errors %}
+                    {{ form.end_datetime(class="form-control form-control-lg is-invalid", min=warrant.start_datetime) }}
+                    <div class="invalid-feedback">
                       {% for error in form.end_datetime.errors %}
-                          <span>{{ error }}</span>
+                      <span>{{ error }}</span>
                       {% endfor %}
+                    </div>
+                    {% else %}
+                    {{ form.end_datetime(class="form-control form-control-lg", type="datetime-local", min=warrant.start_datetime) }}
+                    {% endif %}
                   </div>
-              {% else %}
-                  {{ form.end_datetime(class="form-control form-control-lg", type="datetime-local", min=warrant.start_datetime) }}
-              {% endif %}
-          </div>
-        </div>
-        <div id="accordion" class="top15">
-          <div class="accordion-item">
-            <div class="accordion-header" id="headingOne">
-              <button type="button" class="accordion-button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  <div class="row">
+                    <div id="collapseAbrod" class="collapse" aria-labelledby="headingAbrod" data-parent="#accordionAbrod">
+                      <div class="card-body paddingall">
+                        {{ form.abroad_contry.label(class="form-control-label") }}
+                        {% if form.abroad_contry.errors %}
+                          {{ form.abroad_contry(class="form-control form-control-lg is-invalid") }}
+                          <div class="invalid-feedback">
+                            {% for error in form.abroad_contry.errors %}
+                              <span>{{ error }}</span>
+                            {% endfor %}
+                          </div>
+                        {% else %}
+                            {{ form.abroad_contry(class="form-control form-control-lg") }}
+                        {% endif %}
+                      </div>
+                      <div class="col form-box paddingall">
+                        {{ form.contry_leaving.label(class="form-control-label") }}
+                        {% if form.contry_leaving.errors %}
+                          {{ form.contry_leaving(class="form-control form-control-lg is-invalid") }}
+                          <div class="invalid-feedback">
+                            {% for error in form.contry_leaving.errors %}
+                              <span>{{ error }}</span>
+                            {% endfor %}
+                          </div>
+                        {% else %}
+                          {{ form.contry_leaving(class="form-control form-control-lg", type="datetime-local") }}
+                        {% endif %}
+                      </div>
+                      <div class="col form-box paddingall">
+                        {{ form.contry_return.label(class="form-control-label") }}
+                        {% if form.contry_return.errors %}
+                          {{ form.contry_return(class="form-control form-control-lg is-invalid") }}
+                          <div class="invalid-feedback">
+                            {% for error in form.contry_return.errors %}
+                              <span>{{ error }}</span>
+                            {% endfor %}
+                          </div>
+                        {% else %}
+                          {{ form.contry_return(class="form-control form-control-lg", type="datetime-local") }}
+                        {% endif %}
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div id="accordion" class="top15">
+                  <div class="accordion-item">
+                    <div class="accordion-header" id="headingOne">
+                      <button type="button" class="accordion-button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                 {{ form.vehicle_id.label(class="form-control-label") }}
               </button>
             </div>
