--- a/putninalozi/templates/user.html
+++ b/putninalozi/templates/user.html
@@ -140,7 +140,7 @@
     <div class="modal-dialog" role="document">
     <div class="modal-content">
         <div class="modal-header">
-        <h5 class="modal-title" id="DeleteModalLabel">Da li zaista želiite da trajno izbišete profil korisnika {{form.name.data}} {{form.surname.data}}?</h5>
+        <h5 class="modal-title" id="DeleteModalLabel">Da li zaista želite da trajno izbišete profil korisnika {{form.name.data}} {{form.surname.data}}?</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
