--- a/putninalozi/templates/user.html
+++ b/putninalozi/templates/user.html
@@ -146,7 +146,7 @@
         </button>
         </div>
         <div class="modal-body">
-        <label for="input_password">Da biste izbrisali korisnika potrebno je uneti svoju šifru.</label>
+        <label for="input_password">Da biste izbrisali korisnika potrebno je uneti svoju lozinku.</label>
         </div>
         <div class="modal-footer">
         <form  action="{{ url_for('users.delete_user', user_id=user.id) }}" method="post">
