--- a/putninalozi/templates/vehicle.html
+++ b/putninalozi/templates/vehicle.html
@@ -96,7 +96,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <label for="input_password">Da biste izbrisali vozilo potrebno je uneti svoju šifru.</label>
+        <label for="input_password">Da biste izbrisali vozilo potrebno je uneti svoju lozinku.</label>
       </div>
       <div class="modal-footer">
         <form  action="{{ url_for('vehicles.delete_vehicle', vehicle_id=vehicle.id) }}" method="post">
