--- a/putninalozi/templates/layout.html
+++ b/putninalozi/templates/layout.html
@@ -17,8 +17,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/eaa4d75133.js" crossorigin="anonymous"></script>
     <!-- font awsome za ikonice -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-aK7m+HlUOefOv6yKj70ydzxStxUfu28zZmsnv1POelKjMVTB6UJmq1i2dz6UoL6l2b/U0nRlKYZJnDw8e5d5Gg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-aK7m+HlUOefOv6yKj70ydzxStxUfu28zZmsnv1POelKjMVTB6UJmq1i2dz6UoL6l2b/U0nRlKYZJnDw8e5d5Gg==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha384-q0f3hgnqpGtsA1YEpF9n8LtiyJ50FsblR9SI7J7I3KfBy5J44/GpVXJDd5LJz5wg" crossorigin="anonymous">
 
 
     {% if title %}
