--- a/putninalozi/templates/travel_warrant_list.html
+++ b/putninalozi/templates/travel_warrant_list.html
@@ -19,7 +19,7 @@
             Kreiranje novog putnog naloga
           </button>
         </div>
-
+        
         <div
           id="collapseZero"
           class="collapse"
@@ -96,11 +96,12 @@
             <a
               class="btn btn-info"
               href="{{ url_for('travel_warrants.download_file', file_name=warrant.file_name) }}"
-              title="Preuzmite dokument"
-              target="_blank"
+              title="Štampa dokumenta"
+              target="_blank" 
             >
-              &#x21E9;
+              <i class="fa-solid fa-print"></i>
             </a>
+            <a class="btn btn-outline-info" href="{{ url_for('travel_warrants.download_file', file_name=warrant.file_name) }}" title="Preuzmite dokument" download>&#x21E9;</a>
           </div>          
         </td>
         <td class="align-middle">
@@ -169,10 +170,11 @@
             ><a
               class="btn btn-outline-info"
               href="{{ url_for('travel_warrants.download_file', file_name=warrant.file_name) }}"
-              title="Preuzmite dokument"
+              title="Štampa dokumenta"
               target="_blank"
-              >&#x21E9;</a
+              ><i class="fa-solid fa-print"></i></a
             >
+            <a class="btn btn-outline-info" href="{{ url_for('travel_warrants.download_file', file_name=warrant.file_name) }}" title="Preuzmite dokument" download>&#x21E9;</a>
           </div>
         </td>
         <td class="align-middle">
@@ -233,14 +235,10 @@
               role="button"
               title="Izmenite putni nalog"
             >
-              {{ warrant.travel_warrant_number }}</a><a
-                class="btn btn-outline-info"
-                href="{{ url_for('travel_warrants.download_file', file_name=warrant.file_name) }}"
-                title="Preuzmite dokument"
-                target="_blank"
-                >&#x21E9;</a
-              >
-            </div>
+              {{ warrant.travel_warrant_number }}</a>
+              <a class="btn btn-outline-info" href="{{ url_for('travel_warrants.download_file', file_name=warrant.file_name) }}" title="Štampa dokumenta" target="_blank"><i class="fa-solid fa-print"></i></a>
+              <a class="btn btn-outline-info" href="{{ url_for('travel_warrants.download_file', file_name=warrant.file_name) }}" title="Preuzmite dokument" download>&#x21E9;</a>
+          </div>
         </td>
         <td class="align-middle">
           {{ warrant.travelwarrant_user.name }} {{ warrant.travelwarrant_user.surname}}
@@ -291,8 +289,8 @@
       order: [[0, "desc"]],
       language: {
         url: "//cdn.datatables.net/plug-ins/1.12.1/i18n/sr-SP.json",
-        stateSave: true
       },
+      stateSave: true
     });
   });
 </script>
